# sauvegarde

./: CMakeLists.txt  README.md  server.conf
cmake-listfiles/: Findlibmicrohttpd.cmake
libcdpfgl/: CMakeLists.txt  clock.c  clock.h  configuration.c  configuration.h  libcdpfgl.h  options.c  options.h
server/: backend.c  backend.h  file_backend.c  minio_backend.c  minio_backend.h  minio_interface.c  minio_interface.h  mongodb_backend.c  mongodb_backend.h  options.c  options.h  server.c  server.h  stats.h
tests/d3/: File_d3_strange02  File_d3_strange03  File_d3_strange04
tests/d3/Directory with space/: File_d3_strange01
